brain/sources/prod-metadata/objects/Session_Attendee__c/Session_Attendee__c.object-meta.xml
<CustomObject>
    <description>Junction between Session__c and a Candidate_Training__c. Created when a subsequent candidate books an existing Cohort&apos;s slot: the master Session already exists (owns the Zoom meeting), and each additional candidate is linked to it via a Session_Attendee record so their portal can surface the shared session and later mark their per-candidate step as completed when the session finishes.</description>
    <label>Session Attendee</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Session Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>