brain/sources/prod-metadata/objects/Session_Attendee__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The attending candidate (Account). Denormalized for portal query convenience so we can filter attendees by candidate id in one SOQL hop instead of joining through Candidate_Training.</description>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Group Session Enrollments</relationshipLabel>
    <relationshipName>Attended_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>