brain/sources/prod-metadata/objects/Session_Attendee__c/fields/Candidate_Training__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Training__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The attending candidate&apos;s training. Session_Attendee links a shared Session to this training so the candidate&apos;s portal can surface it.</description>
    <label>Candidate Training</label>
    <referenceTo>Candidate_Training__c</referenceTo>
    <relationshipLabel>Group Session Enrollments</relationshipLabel>
    <relationshipName>Attended_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>