brain/sources/prod-metadata/objects/Session_Attendee__c/fields/Candidate_Training_Step__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Training_Step__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The attendee&apos;s step that corresponds to this master session (matched by Sequence). When the master Session completes, this per-candidate step gets marked Completed and its deliverables activate.</description>
    <label>Candidate Training Step</label>
    <referenceTo>CandidateTrainingStep__c</referenceTo>
    <relationshipLabel>Group Session Enrollments</relationshipLabel>
    <relationshipName>Attended_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>