brain/sources/prod-metadata/objects/Session_Attendee__c/fields/Candidate_TZ_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Candidate_TZ_Start_Time__c</fullName>
    <formula>TEXT(Candidate_Training__r.Candidate_Time_Zone_Start_Time__c)</formula>
    <label>Candidate TZ Start Time</label>
    <type>Text</type>
</CustomField>