brain/sources/prod-metadata/objects/Session_Attendee__c/fields/Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Link__c</fullName>
    <formula>Session__r.Meeting_Link__c</formula>
    <label>Meeting Link</label>
    <type>Text</type>
</CustomField>