brain/sources/prod-metadata/objects/Session_Attendee__c/fields/Meeting_Topic__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Topic__c</fullName>
    <formula>Session__r.MeetingTopic__c</formula>
    <label>Meeting Topic</label>
    <type>Text</type>
</CustomField>