brain/sources/prod-metadata/objects/Session_Attendee__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <formula>Session__r.Scheduled_Date__c</formula>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>