brain/sources/prod-metadata/objects/Session_Attendee__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <description>The master Session this candidate is attending. Master-Detail so the attendee record is cleaned up if the Session goes away.</description>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>