brain/sources/prod-metadata/objects/Session_Attendee__c/fields/Session_Status__c.field-meta.xml
<CustomField>
    <fullName>Session_Status__c</fullName>
    <formula>TEXT(Session__r.Status__c)</formula>
    <label>Session Status</label>
    <type>Text</type>
</CustomField>