brain/sources/prod-metadata/objects/Session_Attendee__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <formula>TEXT(Candidate_Training__r.Time_Zone__c)</formula>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>